# LabVir_moveit_Lab1_v1.2_projeto

./: README.md  versions.md
catkin_ws/src/robotiq/robotiq_gazebo/: CMakeLists.txt
catkin_ws/src/robotiq/robotiq_gazebo/src/: disable_link_plugin.cpp  mimic_joint_plugin.cpp
catkin_ws/src/ur5/ur5_description/launch/: display.launch  display_with_gripper.launch
catkin_ws/src/ur5/ur5_gazebo/launch/: ur5_cubes.launch  ur5_gazebo.launch  ur5_projeto_etapa1.launch  ur5_projeto_etapa2.launch  ur5_setup.launch  ur5_setup_proj.launch  ur5_setup_proj2.launch
catkin_ws/src/ur5/ur5_gazebo/scripts/: ur5_cinematica_direta.py
catkin_ws/src/ur5/ur5_gazebo/worlds/: ur5_single_cube.world  ur5_single_cube_proj.world
